package edu.hitsz.aircraft;

public class EliteProEnemy extends EnemyAircraft {

    public EliteProEnemy(int locationX, int locationY, int speedX, int speedY, int hp) {
        super(locationX, locationY, speedX, speedY, hp);
    }
}
