@startuml
title Enemy Factory Method Pattern

left to right direction
skinparam backgroundColor #FAFAF7
skinparam shadowing false
skinparam roundcorner 12
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
hide empty members

skinparam package {
    BackgroundColor #FFFDF5
    BorderColor #C9B98F
}

skinparam class {
    BackgroundColor #FFF8E7
    BorderColor #7A6A43
    ArrowColor #5D6B75
    FontColor #2F2A22
}

package "client" {
    class EnemySimpleFactory <<Client>>
}

package "factory" {
    abstract class EnemyFactory <<Creator>> {
        + createEnemy(locationX, locationY, speedX, speedY, hp): EnemyAircraft
    }

    class MobEnemyFactory <<ConcreteCreator>>
    class EliteEnemyFactory <<ConcreteCreator>>
    class ElitePlusEnemyFactory <<ConcreteCreator>>
    class EliteProEnemyFactory <<ConcreteCreator>>
    class BossEnemyFactory <<ConcreteCreator>>
}

package "product" {
    abstract class EnemyAircraft <<Product>>
    class MobEnemy <<ConcreteProduct>>
    class EliteEnemy <<ConcreteProduct>>
    class ElitePlusEnemy <<ConcreteProduct>>
    class EliteProEnemy <<ConcreteProduct>>
    class BossEnemy <<ConcreteProduct>>
}

EnemySimpleFactory ..> EnemyFactory : uses

EnemyFactory <|-- MobEnemyFactory
EnemyFactory <|-- EliteEnemyFactory
EnemyFactory <|-- ElitePlusEnemyFactory
EnemyFactory <|-- EliteProEnemyFactory
EnemyFactory <|-- BossEnemyFactory

EnemyAircraft <|-- MobEnemy
EnemyAircraft <|-- EliteEnemy
EnemyAircraft <|-- ElitePlusEnemy
EnemyAircraft <|-- EliteProEnemy
EnemyAircraft <|-- BossEnemy

MobEnemyFactory ..> MobEnemy : creates
EliteEnemyFactory ..> EliteEnemy : creates
ElitePlusEnemyFactory ..> ElitePlusEnemy : creates
EliteProEnemyFactory ..> EliteProEnemy : creates
BossEnemyFactory ..> BossEnemy : creates

@enduml
